--- a/Web.Statu/Views/Manage/PersonDetail.cshtml
+++ b/Web.Statu/Views/Manage/PersonDetail.cshtml
@@ -374,14 +374,14 @@
                         </div>
                         <div class="form-group">
                             <label for="ico" class="col-form-label">Ico:</label>
-                            <input type="text" class="form-control orgahead input-lg" id="ico">
+                            <input type="text" class="form-control" id="ico">
                             <span class="field-validation-valid text-danger" data-valmsg-for="Ico" data-valmsg-replace="true"></span>
+                            <div class="form-inline">
+                                <input type="checkbox" class="form-control" id="ceo">
+                                <label for="ceo">Je CEO</label>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <label for="ceo" class="col-form-label">CEO:</label>
-                            <input type="text" class="form-control orgahead input-lg" id="ceo">
-                            <span class="field-validation-valid text-danger" data-valmsg-for="CEO" data-valmsg-replace="true"></span>
-                        </div>
+                        
                         <div class="form-group" id="castka_toggle">
                             <label for="castka" class="col-form-label">Částka:</label>
                             <input type="text" class="form-control" id="castka">
@@ -503,6 +503,13 @@
         modal.find('#addInfo').val(addinfo)
         modal.find('#zdroj').val(zdroj)
 
+        if (ceo > 0) {
+            $('#ceo').prop('checked', true)
+        }
+        else {
+            $('#ceo').prop('checked', false)
+        }
+
         // set statusboxes correctly
         $('.statusbox').each( (i,el) => {
             if (parseInt(el.value).toString(2) & status.toString(2)) {
@@ -517,6 +524,7 @@
     function editEvent() {
 
         statusValue = 0;
+        ceoValue = null;
 
         $('.statusbox').each( (i,el) => {
             if( el.checked == true ) {
@@ -524,13 +532,17 @@
             }
         });
 
+        if ($('#ceo').is(":checked")) {
+            ceoValue = 1;
+        }
+        
         var osobaEvent = {
             "OsobaId": $("#personId").val(),
             "pk": $("#eventId").val(),
             "Title": $("#titulek").val(),
             "Organizace": $("#organizace").val(),
             "Ico": $("#ico").val(),
-            "CEO": $("#ceo").val(),
+            "CEO": ceoValue,
             "AddInfoNum": $("#castka").val(),
             "AddInfo": $("#addInfo").val(),
             "DatumOd": $("#datumOd").val(),
