Views cleaning warnings

--- a/Web.Statu/Views/Home/Reports/27_COVIDPodpora.cshtml
+++ b/Web.Statu/Views/Home/Reports/27_COVIDPodpora.cshtml
@@ -17,10 +17,10 @@
 @{
 
 //https://twitter.com/HelenaHorska/status/1255496055782887424/photo/1
-https://www.echo24.cz/a/Skptx/pomoc-firmam-je-extremne-pomala-vlada-slibila-bilion-realne-poslala-jen-par-miliard
+//https://www.echo24.cz/a/Skptx/pomoc-firmam-je-extremne-pomala-vlada-slibila-bilion-realne-poslala-jen-par-miliard
 
     int pocetDomacnosti = 4347840;
-    int pocetPracujicich = 5731376 + 160474; // https://www.czso.cz/documents/10180/45709978/300002171132.pdf/8fe48ed6-1480-47f4-b340-a9cef22e9715?version=1.0
+//    int pocetPracujicich = 5731376 + 160474; // https://www.czso.cz/documents/10180/45709978/300002171132.pdf/8fe48ed6-1480-47f4-b340-a9cef22e9715?version=1.0
 
     var ds = HlidacStatu.Lib.Data.External.DataSets.DataSet.CachedDatasets.Get("pomoc-covid");
     var data = covid_pomoc.VsechnaPomoc();
